--- a/04-bookmark-landing-page/index.html
+++ b/04-bookmark-landing-page/index.html
@@ -10,6 +10,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      rel="preload"
+      href="src/assets/images/illustration-hero.svg"
+      as="image"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,6 +26,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
