preload bg-images, preload font css

--- a/05-space-tourism/index.html
+++ b/05-space-tourism/index.html
@@ -4,12 +4,92 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
+    /></noscript>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
       rel="stylesheet"
+    /> -->
+
+    <!-- Preload images for Home -->
+    <link
+      rel="preload"
+      href="/assets/home/background-home-desktop.jpg"
+      as="image"
     />
+    <link
+      rel="preload"
+      href="/assets/home/background-home-tablet.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/home/background-home-mobile.jpg"
+      as="image"
+    />
+
+    <!-- Preload images for Destination -->
+    <link
+      rel="preload"
+      href="/assets/destination/background-destination-desktop.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/destination/background-destination-tablet.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/destination/background-destination-mobile.jpg"
+      as="image"
+    />
+
+    <!-- Preload images for Page 3 -->
+    <link
+      rel="preload"
+      href="/assets/crew/background-crew-desktop.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/crew/background-crew-tablet.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/crew/background-crew-mobile.jpg"
+      as="image"
+    />
+
+    <!-- Preload images for Page 4 -->
+    <link
+      rel="preload"
+      href="/assets/technology/background-technology-desktop.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/technology/background-technology-tablet.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="/assets/technology/background-technology-mobile.jpg"
+      as="image"
+    />
+
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body>
