added basic page animation

--- a/05-space-tourism/index.html
+++ b/05-space-tourism/index.html
@@ -93,7 +93,7 @@
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: #0b0d17; overflow: hidden"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
